<?xml version="1.0"?>
<package format="2">
  <name>cable_pose_bridge</name>
  <version>0.0.2</version>
  <description>Cable pose bridge between ROS 2 and ROS 1</description>
  <maintainer email="alesolano@erlerobotics.com">Ale Solano</maintainer>
  <license>All rights reserved</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
