<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>hros_cognition_mara_components</name>
  <version>0.0.2</version>
  <description>
    hros_cognition_mara_components
  </description>
  <maintainer email="risto@erlerobotics.com">Risto Kojcev</maintainer>
  <maintainer email="alex@erlerobotics.com">Alejandro Hernández</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>hrim_actuator_rotaryservo_msgs</build_depend>
  <build_depend>lifecycle_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>hrim_generic_msgs</build_depend>
  <build_depend>rttest</build_depend>
  <build_depend>yaml_cpp_vendor</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>hrim_actuator_rotaryservo_msgs</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>hrim_generic_msgs</exec_depend>
  <exec_depend>rttest</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
