<?xml version="1.0"?>
<package format="2">
  <name>mara_bringup</name>
  <version>0.0.1</version>
  <description>
    ros2 launch scripts for starting the MARA
  </description>
  <license>Apache 2.0</license>
  <author email="ahcorde@erlerobotics.com">Alejandro Hernandez</author>
  <maintainer email="ahcorde@erlerobotics.com">Alejandro Hernandez</maintainer>
  <url type="repository">https://github.com/AcutronicRobotics/MARA</url>
  <url type="bugtracker">https://github.com/AcutronicRobotics/MARA/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
