<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mara_gazebo_plugins</name>
  <version>0.0.2</version>
  <description>
    MARA Gazebo plugins
  </description>

  <license>BSD, Apache 2.0</license>

  <author email="ahcorde@erlerobotics.com">Alejandro Hernandez</author>
  <author email="nestor@erlerobotics.com">Nestor Gonzalez</author>
  <author email="risto@erlerobotics.com">Risto Kojcev</author>
  <maintainer email="nestor@erlerobotics.com">Nestor Gonzalez</maintainer>
  <maintainer email="risto@erlerobotics.com">Risto Kojcev</maintainer>
  <url type="repository">https://github.com/erlerobot/mara_ai</url>
  <url type="bugtracker">https://github.com/erlerobot/mara_ai/issues</url>

  <author>Alejandro Hernandez</author>
  <author>Nestor Gonzalez</author>
  <author>Risto Kojcev</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hrim_actuator_rotaryservo_msgs</depend>
  <depend>hrim_generic_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
