<?xml version="1.0"?>
<package format="2">
  <name>robotiq_gazebo</name>
  <version>0.0.1</version>
  <description>
    ROS2 packages for MARA simulations
  </description>
  <license>Apache 2.0</license>
  <author email="ahcorde@erlerobotics.com">Alejandro Hernandez</author>
  <maintainer email="ahcorde@erlerobotics.com">Alejandro Hernandez</maintainer>
  <url type="repository">https://github.com/erlerobot/mara</url>
  <url type="bugtracker">https://github.com/erlerobot/mara/issues</url>

  <depend>urdf</depend>

  <buildtool_depend>urdf</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
